logs/run_20250309_143634.log
[2025-03-09 14:36:34] AI Code Bot started working on project: Automation Tools
[2025-03-09 14:36:34] Found 4 existing Python files in project.
[2025-03-09 14:36:34] Generating AI-driven tasks...
[2025-03-09 14:36:37] Generated 1 executable tasks.
[2025-03-09 14:36:37] Created script: C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_1_20250309_143637.py
[2025-03-09 14:36:37] Error executing script C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_1_20250309_143637.py:
  File "C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_1_20250309_143637.py", line 6
    automated_task()
    ^
IndentationError: expected an indented block after function definition on line 3

